# investing_at_ATH

./: .gitignore  README.md  pyproject.toml  requirements.txt
strat_runner/: environment.py  main.py  models.py  recorder.py  run_registry.py
strat_runner/analysis/: explore.ipynb  plotter.py
strat_runner/data/: loader.py
strat_runner/engine/: __init__.py  environment.py  experiment.py  journal.py  modifier.py  money_spawner.py  outcome_registry.py  research.py  staker.py
strat_runner/executors/: mock_executor.py
strat_runner/strategies/: buy_below.py  hold.py  invest_everything.py
strat_runner/tests/: test_environment.py  test_journal.py  test_loader_dates.py  test_mock_executor.py  test_order.py  test_plotter.py  test_research.py  test_staker.py
strat_runner/tests/strategies/: test_buy_below.py  test_hold.py  test_invest_everything.py
