[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-lab"
version = "0.1.0"
description = "Simulate investment strategies on historical market data"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "plotly>=5.24",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
]

[tool.setuptools]
package-dir = {"" = "strat_runner"}
py-modules = ["models"]

[tool.setuptools.packages.find]
where = ["strat_runner"]
include = ["engine*", "strategies*", "executors*", "data*", "analysis*"]

[tool.pytest.ini_options]
testpaths = ["strat_runner/tests"]
pythonpath = ["strat_runner"]
